# 3d-reconstruction

./: README.md
igl/IGLViewer/: CMakeLists.txt  main.cpp
image2mesh/: CMakeLists.txt  requeriments.txt
image2mesh/include/: Camera.h  Color.h  ImageBlock.h  MeshUtils.h  PhotoscanXMLReader.h  ProjectionMeshLabelling.h  Sensor.h
image2mesh/src/: CMakeLists.txt  image2mesh.cpp
image2mesh/src/camera/: Camera.cpp
image2mesh/src/mesh/: Color.cpp  ImageBlock.cpp  MeshUtils.cpp  ProjectionMeshLabelling.cpp
image2mesh/src/photoscan/: PhotoscanXMLReader.cpp
